--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.14.0",
-    "pg-promise": "^5.2.0"
+    "pg-promise": "^5.2.0",
+    "pug": "^0.1.0"
   }
 }
