--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "pg-promise": "^5.2.0",
-    "pug": "^0.1.0"
+    "pug": "^0.1.0",
+    "xml": "^1.0.1"
   }
 }
