--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "express": "^4.14.0",
     "pg-promise": "^5.2.0",
     "pug": "^0.1.0",
+    "react": "^15.2.1",
+    "react-dom": "^15.2.1",
     "xml": "^1.0.1"
   }
 }
