--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
+    "nodemon": "^1.10.0",
     "pg-promise": "^5.2.0",
     "pug": "^0.1.0",
     "react": "^15.2.1",
