--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel": "^6.5.2",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "nodemon": "^1.10.0",
