add webpack just in case i need to bundle or automate some transpiling

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "pug": "^0.1.0",
     "react": "^15.2.1",
     "react-dom": "^15.2.1",
+    "webpack": "^1.13.1",
     "xml": "^1.0.1"
   }
 }
