--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "license": "ISC",
   "dependencies": {
     "babel": "^6.5.2",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.11.1",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "nodemon": "^1.10.0",
